# auto-commit-bot

./: .gitignore  README.md  README_zh.md  pyproject.toml
examples/: basic_usage.py  local_llm_usage.py
src/auto_commit_bot/: __init__.py  cli.py  config.py  git_utils.py  llm_utils.py
tests/: __init__.py  test_cli.py  test_config.py  test_git_utils.py  test_llm_utils.py
